{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 40,
  "lineage": "6ba03bb6-ee20-3330-bee1-053b330dd5ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da11587bf1a06887",
            "arn": "arn:aws:ec2:us-east-1:003938174336:elastic-ip/eipalloc-0da11587bf1a06887",
            "association_id": "eipassoc-0d6131e9ddb0e4956",
            "domain": "vpc",
            "id": "eipalloc-0da11587bf1a06887",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0734a4c27811b15b5",
            "private_dns": "ip-10-0-0-243.ec2.internal",
            "private_ip": "10.0.0.243",
            "public_dns": "ec2-67-202-5-163.compute-1.amazonaws.com",
            "public_ip": "67.202.5.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-nat-eip",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-nat-eip",
              "Project": "rps-cloud"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:internet-gateway/igw-06ee6698d706fdde2",
            "id": "igw-06ee6698d706fdde2",
            "owner_id": "003938174336",
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-igw",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-igw",
              "Project": "rps-cloud"
            },
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:003938174336:loadbalancer/app/rps-cloud-dev-alb/e36611076d5e6c4b",
            "arn_suffix": "app/rps-cloud-dev-alb/e36611076d5e6c4b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rps-cloud-dev-alb-1793475329.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:003938174336:loadbalancer/app/rps-cloud-dev-alb/e36611076d5e6c4b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rps-cloud-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-027b28b4ea4f42fa0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b0115b6252cdbab"
              },
              {
                "subnet_id": "subnet-0e91b4c764506f54e"
              }
            ],
            "subnets": [
              "subnet-00b0115b6252cdbab",
              "subnet-0e91b4c764506f54e"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-alb",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-alb",
              "Project": "rps-cloud"
            },
            "vpc_id": "vpc-0a8da5e28cc14313c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:003938174336:listener/app/rps-cloud-dev-alb/e36611076d5e6c4b/f246fc9fc5ff5b92",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:003938174336:targetgroup/rps-cloud-dev-tg/489da57ffa72dbc2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:003938174336:listener/app/rps-cloud-dev-alb/e36611076d5e6c4b/f246fc9fc5ff5b92",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:003938174336:loadbalancer/app/rps-cloud-dev-alb/e36611076d5e6c4b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:003938174336:targetgroup/rps-cloud-dev-tg/489da57ffa72dbc2",
            "arn_suffix": "targetgroup/rps-cloud-dev-tg/489da57ffa72dbc2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:003938174336:targetgroup/rps-cloud-dev-tg/489da57ffa72dbc2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:003938174336:loadbalancer/app/rps-cloud-dev-alb/e36611076d5e6c4b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rps-cloud-dev-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-tg",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-tg",
              "Project": "rps-cloud"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da11587bf1a06887",
            "association_id": "eipassoc-0d6131e9ddb0e4956",
            "connectivity_type": "public",
            "id": "nat-049f8ec401fcd7d19",
            "network_interface_id": "eni-0734a4c27811b15b5",
            "private_ip": "10.0.0.243",
            "public_ip": "67.202.5.163",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e91b4c764506f54e",
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-nat",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-nat",
              "Project": "rps-cloud"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:route-table/rtb-0a0f4bfffb30631ca",
            "id": "rtb-0a0f4bfffb30631ca",
            "owner_id": "003938174336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-049f8ec401fcd7d19",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-private-rt",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-private-rt",
              "Project": "rps-cloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:route-table/rtb-0a8b0a88f315b61c8",
            "id": "rtb-0a8b0a88f315b61c8",
            "owner_id": "003938174336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ee6698d706fdde2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-public-rt",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-public-rt",
              "Project": "rps-cloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03029019e0b534e0f",
            "route_table_id": "rtb-0a0f4bfffb30631ca",
            "subnet_id": "subnet-071eeadbf9671b9fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0240bce615185a79e",
            "route_table_id": "rtb-0a0f4bfffb30631ca",
            "subnet_id": "subnet-0f12f1aa4b1d3b374"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fed01291ccf30e0e",
            "route_table_id": "rtb-0a8b0a88f315b61c8",
            "subnet_id": "subnet-0e91b4c764506f54e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0525c7e44e2737443",
            "route_table_id": "rtb-0a8b0a88f315b61c8",
            "subnet_id": "subnet-00b0115b6252cdbab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:security-group/sg-027b28b4ea4f42fa0",
            "description": "Allow HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "102.212.63.248/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027b28b4ea4f42fa0",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.212.63.248/32"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rps-cloud-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "003938174336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-alb-sg",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-alb-sg",
              "Project": "rps-cloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:security-group/sg-0a5bb0186fcb39b0e",
            "description": "Allow traffic from ALB and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "102.212.63.248/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5bb0186fcb39b0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.212.63.248/32"
                ],
                "description": "SSH from my IP (optional)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "App port from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027b28b4ea4f42fa0"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "rps-cloud-dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "003938174336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-ec2-sg",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-ec2-sg",
              "Project": "rps-cloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:security-group/sg-0b1e80a39cc736374",
            "description": "Allow PostgreSQL from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "102.212.63.248/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1e80a39cc736374",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5bb0186fcb39b0e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rps-cloud-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "003938174336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-rds-sg",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-rds-sg",
              "Project": "rps-cloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:security-group/sg-09c9df99ee2986143",
            "description": "Allow Redis from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "102.212.63.248/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c9df99ee2986143",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from EC2",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5bb0186fcb39b0e"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "rps-cloud-dev-redis-sg",
            "name_prefix": "",
            "owner_id": "003938174336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-redis-sg",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-redis-sg",
              "Project": "rps-cloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:subnet/subnet-071eeadbf9671b9fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071eeadbf9671b9fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003938174336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-private-0",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-private-0",
              "Project": "rps-cloud"
            },
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:subnet/subnet-0f12f1aa4b1d3b374",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f12f1aa4b1d3b374",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003938174336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-private-1",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-private-1",
              "Project": "rps-cloud"
            },
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:subnet/subnet-0e91b4c764506f54e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e91b4c764506f54e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "003938174336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-public-0",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-public-0",
              "Project": "rps-cloud"
            },
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:subnet/subnet-00b0115b6252cdbab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b0115b6252cdbab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "003938174336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-public-1",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-public-1",
              "Project": "rps-cloud"
            },
            "vpc_id": "vpc-0a8da5e28cc14313c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003938174336:vpc/vpc-0a8da5e28cc14313c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d6b6b32216d60ee",
            "default_route_table_id": "rtb-04285613405207c2f",
            "default_security_group_id": "sg-053f6f2c0c40e0278",
            "dhcp_options_id": "dopt-079a85803fb336f95",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8da5e28cc14313c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04285613405207c2f",
            "owner_id": "003938174336",
            "tags": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-vpc",
              "Project": "rps-cloud"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rps-cloud-dev-vpc",
              "Project": "rps-cloud"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}